tests/fixtures/hub-module/example/1/bad/src/zeta.ts
export const zetaValue = "zeta"

export const readZeta = (): string => zetaValue
